--- a/Dotnet_Project/Dotnet_Project.csproj
+++ b/Dotnet_Project/Dotnet_Project.csproj
@@ -98,6 +98,12 @@
   <ItemGroup>
     <Compile Include="Database\SqliteCommand.cs" />
     <Compile Include="Database\SQLiteDatabase.cs" />
+    <Compile Include="Form_Data.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Data.Designer.cs">
+      <DependentUpon>Form_Data.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +116,10 @@
     <Compile Include="Model\villages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyncData.cs" />
+    <EmbeddedResource Include="Form_Data.resx">
+      <DependentUpon>Form_Data.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_Login.resx">
       <DependentUpon>Form_Login.cs</DependentUpon>
     </EmbeddedResource>
