--- a/Dotnet_Project/Dotnet_Project.csproj
+++ b/Dotnet_Project/Dotnet_Project.csproj
@@ -98,6 +98,18 @@
   <ItemGroup>
     <Compile Include="Database\SqliteCommand.cs" />
     <Compile Include="Database\SQLiteDatabase.cs" />
+    <Compile Include="Form_Babies_Reported.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Babies_Reported.Designer.cs">
+      <DependentUpon>Form_Babies_Reported.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Baseline.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Baseline.Designer.cs">
+      <DependentUpon>Form_Baseline.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Data.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,18 +122,33 @@
     <Compile Include="Form_Login.Designer.cs">
       <DependentUpon>Form_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Table.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Table.Designer.cs">
+      <DependentUpon>Form_Table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\DataVariables.cs" />
-    <Compile Include="Model\forms.cs" />
+    <Compile Include="Model\forms_data.cs" />
     <Compile Include="Model\users.cs" />
     <Compile Include="Model\villages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncData.cs" />
+    <EmbeddedResource Include="Form_Babies_Reported.resx">
+      <DependentUpon>Form_Babies_Reported.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Baseline.resx">
+      <DependentUpon>Form_Baseline.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_Data.resx">
       <DependentUpon>Form_Data.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Login.resx">
       <DependentUpon>Form_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Table.resx">
+      <DependentUpon>Form_Table.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
